src/test/ui/error-codes/E0071.stderr
error[E0071]: expected struct, variant or union type, found enum `Foo`
  --> $DIR/E0071.rs:15:13
   |
15 |     let u = FooAlias { value: 0 };
   |             ^^^^^^^^ not a struct

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0071"
